navbar overflow problem solved

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -146,7 +146,7 @@
   }
 }
 
-html,
+
 body {
   max-width: 100%;
   overflow-x: hidden;
